@@ -407,7 +407,8 @@ S3method(plot, hhh4)
 export(plotHHH4_fitted, plotHHH4_fitted1,
        plotHHH4_season, getMaxEV_season,
        plotHHH4_maxEV, getMaxEV,
-       plotHHH4_ri)
+       plotHHH4_ri,
+       plotHHH4_neweights)
 
 ## backwards-compatibility for old class name "ah4"
 S3method(print, ah4)
